--- a/docker/vector/vector.yaml
+++ b/docker/vector/vector.yaml
@@ -14,13 +14,13 @@ sources:
       - ^hyperswitch-.+
     decoding:
       codec: json
+
 transforms:
-  my_transform_id:
+  cassandra_get:
     type: lua
     inputs:
       - kafka_payments
     version: "2"
-
     hooks:
       init: init
       process: process
@@ -50,17 +50,6 @@ transforms:
         return rows
       end
 
-      function db_set(state, id, id_type, version)
-        version = version or 1
-        local res = assert(client:execute("INSERT INTO payments (id, id_type, state, version) VALUES (?, ?, ?, ?)", {
-          id,
-          id_type,
-          state,
-          version
-        }))
-        return res
-      end
-
       function copy(obj, seen)
         if type(obj) ~= 'table' then return obj end
         if seen and seen[obj] then return seen[obj] end
@@ -71,19 +60,15 @@ transforms:
         return res
       end
 
-
       function process(event, emit)
         local json = require "json"
-        local new_event = copy(event)
 
         local old_event = db_get(string.format("%s_%s", event.log.log.merchant_id, event.log.log.payment_id), "merchant_payment")
-        if not old_event then
-          print("no old event")
-        else
-          emit_signed_log(emit, event, json.decode(old_event[1].state), -1)
+        if #old_event == 1 then
+          event.log.old_log = json.decode(old_event[1].state)
         end
-        local new_event_insert = db_set(json.encode(new_event.log.log), string.format("%s_%s", new_event.log.log.merchant_id, new_event.log.log.payment_id), "merchant_payment")
-        emit_signed_log(emit, new_event, new_event.log.log, 1)
+        emit(event)
+
       end
 
       function shutdown(emit)
@@ -95,10 +80,84 @@ transforms:
         event.log.sign = sign
         emit(event)
       end
+
+  club_with_old_event:
+    type: remap
+    inputs:
+      - cassandra_get
+    source: >-
+      new_event_keys = keys(.log) ?? [];
+      old_log = object(.old_log) ?? {};
+      for_each(old_log) -> |key, value| {
+        if !includes(new_event_keys, key) {
+          .log = set!(.log, [key], value)
+        }
+      }
+
+  cassandra_set:
+    type: lua
+    inputs:
+      - club_with_old_event
+    version: "2"
+    hooks:
+      init: init
+      process: process
+      shutdown: shutdown
+    source: |-
+      function init(emit)
+
+        local cassandra = require "cassandra"
+        
+        client = assert(cassandra.new {
+          host = "cassandra0",
+          port = 9042,
+          keyspace = "sessionizer"
+        })
+
+        client:settimeout(1000)
+        assert(client:connect())
+
+      end
+
+      function db_set(state, id, id_type, version)
+        version = version or 1
+        local res = assert(client:execute("INSERT INTO payments (id, id_type, state, version) VALUES (?, ?, ?, ?)", {
+          id,
+          id_type,
+          state,
+          version
+        }))
+        return res
+      end
+
+      function process(event, emit)
+        local json = require "json"
+        local new_event_insert = db_set(json.encode(event.log.log), string.format("%s_%s", event.log.log.merchant_id, event.log.log.payment_id), "merchant_payment")
+        emit(event)
+      end
+
+      function shutdown(emit)
+        client:close()
+      end
+
+  generate_signed_events:
+    type: remap
+    inputs:
+      - cassandra_set
+    source: >-
+      events = [];
+      if exists(.old_log) {
+        .old_log.sign_flag = -1;
+        events = push(events, .old_log);
+      };
+      .log.sign_flag = 1;
+      events = push(events, .log);
+      . = events
+
 sinks:
   console:
     inputs:
-      - my_transform_id
+      - generate_signed_events
     target: stdout
     type: console
     encoding:
