--- a/docker/vector/vector.yaml
+++ b/docker/vector/vector.yaml
@@ -16,10 +16,24 @@ sources:
       codec: json
 
 transforms:
+  buffer_with_reduce:
+    type: reduce
+    inputs:
+      - kafka_payments
+    group_by:
+      - log.log_type
+      - log.merchant_id
+      - log.payment_id
+      - log.attempt_id
+      - log.refund_id
+      - log.dispute_id
+    merge_strategies:
+      log: retain
+
   init_sessionizer_vars:
     type: remap
     inputs:
-      - kafka_payments
+      - buffer_with_reduce
     source: >-
       .sessionizer = {
         "table": "payments",
