--- a/config/deployments/production.toml
+++ b/config/deployments/production.toml
@@ -337,3 +337,6 @@ keys = "user-agent"
 
 [saved_payment_methods]
 sdk_eligible_payment_methods = "card"
+
+[separate_three_ds_version_call_enabled_connectors]
+authentication_connectors_list = "gpayments"
