--- a/config/development.toml
+++ b/config/development.toml
@@ -625,3 +625,6 @@ disputes = "hyperswitch-dispute-events"
 
 [saved_payment_methods]
 sdk_eligible_payment_methods = "card"
+
+[separate_three_ds_version_call_enabled_connectors]
+authentication_connectors_list = "gpayments"
