feat(collect_link): read enabled_payment_methods in /admin and collect link request

--- a/config/deployments/env_specific.toml
+++ b/config/deployments/env_specific.toml
@@ -155,6 +155,20 @@ queue_strategy = "Fifo"   # Add the queue strategy used by the database bb8 clie
 [generic_link]
 [generic_link.payment_method_collect]
 sdk_url = "http://localhost:9090/0.16.7/v0/HyperLoader.js"
+expiry = 900
+[generic_link.payment_method_collect.ui_config]
+theme = "#1A1A1A"
+logo = "https://app.hyperswitch.io/HyperswitchFavicon.png"
+collector_name = "HyperSwitch"
+[[generic_link.payment_method_collect.enabled_payment_methods]]
+payment_method = "card"
+payment_method_types = ["credit", "debit"]
+[[generic_link.payment_method_collect.enabled_payment_methods]]
+payment_method = "bank_transfer"
+payment_method_types = ["ach", "bacs", "sepa"]
+[[generic_link.payment_method_collect.enabled_payment_methods]]
+payment_method = "wallet"
+payment_method_types = ["paypal", "pix", "venmo"]
 
 [payment_link]
 sdk_url = "http://localhost:9090/0.16.7/v0/HyperLoader.js"
