--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -354,7 +354,7 @@ stax = { long_lived_token = true, payment_method = "card,bank_debit" }
 square = { long_lived_token = false, payment_method = "card" }
 braintree = { long_lived_token = false, payment_method = "card" }
 gocardless = { long_lived_token = true, payment_method = "bank_debit" }
-billwerk = {long_lived_token = false, payment_method = "card"}
+billwerk = { long_lived_token = false, payment_method = "card" }
 
 [temp_locker_enable_config]
 stripe = { payment_method = "bank_transfer" }
@@ -387,16 +387,16 @@ slack_invite_url = "https://www.example.com/"   # Slack invite url for hyperswit
 discord_invite_url = "https://www.example.com/" # Discord invite url for hyperswitch
 
 [mandates.supported_payment_methods]
-card.credit = { connector_list = "stripe,adyen,cybersource,bankofamerica"}           # Mandate supported payment method type and connector for card
-wallet.paypal = { connector_list = "adyen" }                            # Mandate supported payment method type and connector for wallets
-pay_later.klarna = { connector_list = "adyen" }                         # Mandate supported payment method type and connector for pay_later
-bank_debit.ach = { connector_list = "gocardless" }                      # Mandate supported payment method type and connector for bank_debit
-bank_debit.becs = { connector_list = "gocardless" }                     # Mandate supported payment method type and connector for bank_debit
-bank_debit.sepa = { connector_list = "gocardless" }                     # Mandate supported payment method type and connector for bank_debit
-bank_redirect.ideal = { connector_list = "stripe,adyen,globalpay" }     # Mandate supported payment method type and connector for bank_redirect
+card.credit = { connector_list = "stripe,adyen,cybersource,bankofamerica" }           # Mandate supported payment method type and connector for card
+wallet.paypal = { connector_list = "adyen" }                                          # Mandate supported payment method type and connector for wallets
+pay_later.klarna = { connector_list = "adyen" }                                       # Mandate supported payment method type and connector for pay_later
+bank_debit.ach = { connector_list = "gocardless" }                                    # Mandate supported payment method type and connector for bank_debit
+bank_debit.becs = { connector_list = "gocardless" }                                   # Mandate supported payment method type and connector for bank_debit
+bank_debit.sepa = { connector_list = "gocardless" }                                   # Mandate supported payment method type and connector for bank_debit
+bank_redirect.ideal = { connector_list = "stripe,adyen,globalpay" }                   # Mandate supported payment method type and connector for bank_redirect
 bank_redirect.sofort = { connector_list = "stripe,adyen,globalpay" }
 wallet.apple_pay = { connector_list = "stripe,adyen,cybersource,noon,bankofamerica" }
-wallet.google_pay = { connector_list = "bankofamerica"}
+wallet.google_pay = { connector_list = "bankofamerica" }
 bank_redirect.giropay = { connector_list = "adyen,globalpay" }
 
 
@@ -524,6 +524,20 @@ applepay_endpoint = "https://apple-pay-gateway.apple.com/paymentservices/registe
 [generic_link]
 [generic_link.payment_method_collect]
 sdk_url = "http://localhost:9090/0.16.7/v0/HyperLoader.js"
+expiry = 900
+[generic_link.payment_method_collect.ui_config]
+theme = "#1A1A1A"
+logo = "https://app.hyperswitch.io/HyperswitchFavicon.png"
+collector_name = "HyperSwitch"
+[[generic_link.payment_method_collect.enabled_payment_methods]]
+payment_method = "card"
+payment_method_types = ["credit", "debit"]
+[[generic_link.payment_method_collect.enabled_payment_methods]]
+payment_method = "bank_transfer"
+payment_method_types = ["ach", "bacs", "sepa"]
+[[generic_link.payment_method_collect.enabled_payment_methods]]
+payment_method = "wallet"
+payment_method_types = ["paypal", "pix", "venmo"]
 
 [payment_link]
 sdk_url = "http://localhost:9090/0.16.7/v0/HyperLoader.js"
