fix(mca): Added config

--- a/config/docker_compose.toml
+++ b/config/docker_compose.toml
@@ -486,3 +486,6 @@ disputes = "hyperswitch-dispute-events"
 
 [saved_payment_methods]
 sdk_eligible_payment_methods = "card"
+
+[locker_based_open_banking_connectors]
+connector_list = ""
