--- a/config/config.example.toml
+++ b/config/config.example.toml
@@ -624,3 +624,6 @@ disputes = "hyperswitch-dispute-events"
 
 [saved_payment_methods]
 sdk_eligible_payment_methods = "card"
+
+[locker_based_open_banking_connectors]
+connector_list = ""
