--- a/config/deployments/sandbox.toml
+++ b/config/deployments/sandbox.toml
@@ -343,3 +343,6 @@ keys = "user-agent"
 
 [saved_payment_methods]
 sdk_eligible_payment_methods = "card"
+
+[locker_based_open_banking_connectors]
+connector_list = ""
