--- a/config/development.toml
+++ b/config/development.toml
@@ -628,4 +628,4 @@ disputes = "hyperswitch-dispute-events"
 sdk_eligible_payment_methods = "card"
 
 [locker_based_open_banking_connectors]
-connector_list = []
+connector_list = ""
