added template code for Flexipay

--- a/config/deployments/sandbox.toml
+++ b/config/deployments/sandbox.toml
@@ -46,6 +46,7 @@ dlocal.base_url = "https://sandbox.dlocal.com/"
 dummyconnector.base_url = "http://localhost:8080/dummy-connector"
 ebanx.base_url = "https://sandbox.ebanxpay.com/"
 fiserv.base_url = "https://cert.api.fiservapps.com/"
+flexipay.base_url = "https://tran-dev.flexipay.com.co/api/transaccion"
 forte.base_url = "https://sandbox.forte.net/api/v3"
 globalpay.base_url = "https://apis.sandbox.globalpay.com/ucp/"
 globepay.base_url = "https://pay.globepay.co/"
